Finished the CSS style

--- a/src/app/components/convert/convert.component.html
+++ b/src/app/components/convert/convert.component.html
@@ -27,9 +27,9 @@
             </select>
         </div>
     </div>
-   <h5 class="text-center">
-       <span class="badge bg-success">Aqui va algo</span>
-       <span class="badge bg-secondary">Aqui va otra cosa</span>
-       <span class="badge bg-success">Aqui va otra cosa</span>
+   <h5 class="text-center mt-3">
+       <span class="badge bg-success">1000</span>
+       <span class="badge bg-secondary">SON</span>
+       <span class="badge bg-success">500</span>
    </h5>
 </div>
