--- a/src/app/components/convert/convert.component.html
+++ b/src/app/components/convert/convert.component.html
@@ -3,33 +3,27 @@
         <div class="col-lg-12">
             <div class="form-group">
                 <label for="cantidad">Ingrese cantidad</label>
-                <input type="number" class="form-control form-control-lg" id="cantidad" placeholder="ingrese la cantidad...">
+                <input type="number" class="form-control form-control-lg" id="cantidad" placeholder="ingrese la cantidad..." [(ngModel)]="cantidad" (input)="convertir()">
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-lg-6">
             <label for="tengo"></label>
-            <select class="form-select"id="tengo">
-                <option selected>Tengo</option>
-                <option value="1">USD</option>
-                <option value="1">EUR</option>
-                <option value="1">LIBRA</option>
+            <select class="form-select" id="tengo" [(ngModel)]="tengo" (change)="convertir()">
+                <option *ngFor="let money of monedas">{{money}}</option>
             </select>
         </div>
         <div class="col-lg-6">
             <label for="quiero"></label>
-            <select class="form-select"id="quiero">
-                <option selected>Quiero</option>
-                <option value="1">USD</option>
-                <option value="1">EUR</option>
-                <option value="1">LIBRA</option>
+            <select class="form-select"id="quiero" [(ngModel)]="quiero" (change)="convertir()">
+                <option *ngFor="let money of monedas">{{money}}</option>
             </select>
         </div>
     </div>
-   <h5 class="text-center mt-3">
-       <span class="badge bg-success">1000</span>
+   <h5 *ngIf="cantidad > 0" class="text-center mt-3">
+       <span class="badge bg-success">{{cantidad}} {{tengo}}</span>
        <span class="badge bg-secondary">SON</span>
-       <span class="badge bg-success">500</span>
+       <span class="badge bg-success">{{total| number: '0.0-2'}} {{quiero}}</span>
    </h5>
 </div>
